src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Political_Party__c</fullName>
        <label>Political Party</label>
        <picklist>
            <picklistValues>
                <fullName>Fianna Fáil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Gael</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sinn Féin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Before Profit Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socialist Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers &amp; Unemployed Action Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_Inner_City__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin Inner City</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_North__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin North</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_South__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin South</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Dublin_West__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Dublin West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefer_Outside_Dublin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefer Outside Dublin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Centre__c</fullName>
        <inlineHelpText>Preference identified on original registration sheet</inlineHelpText>
        <label>Preferred Centre</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_volunteer_experience__c</fullName>
        <label>Previous volunteer experience</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professional_status__c</fullName>
        <label>Professional status</label>
        <picklist>
            <picklistValues>
                <fullName>Solicitor qualified to practice in Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrister qualified to practice in Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified in Ireland but not currently practicing law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprentice Solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professonal_status_if_other__c</fullName>
        <label>Professonal status, if other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Information_pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Information pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receives_FLAC_News__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receives FLAC News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receives_PILA_bulletin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receives PILA bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sat_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sat in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senator_Nominated_By__c</fullName>
        <label>Senator Nominated By</label>
        <picklist>
            <controllingField>Type_of_Politician__c</controllingField>
            <picklistValues>
                <fullName>Administrative Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agricultural Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural &amp; Educational Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial &amp; Commercial Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labour Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominated by An Taoiseach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUI Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University of Dublin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_SMS_TXT__c</fullName>
        <label>Send SMS TXT</label>
        <length>158</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_in_CV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent in CV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_in_registration_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent in registration form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sit_in_date_and_place__c</fullName>
        <label>Sit in date and place</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Where the contact was entered from</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>PILA bulletin signup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PILA database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC database</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TD_Constituency__c</fullName>
        <label>TD Constituency</label>
        <picklist>
            <controllingField>Type_of_Politician__c</controllingField>
            <picklistValues>
                <fullName>Carlow-Kilkenny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cavan-Monaghan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork North Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork South Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cork South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donegal South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin Mid-West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin North Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin South-Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dún Laoghaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galway West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry North Limerick West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kildare South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laois Offaly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limerick</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_email_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>added by Eamon to  test VR with PILA newsletter</inlineHelpText>
        <label>Test email contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topics_of_Interest__c</fullName>
        <description>Areas of particular interest to media contact</description>
        <label>Topics of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Debt &amp; credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public interest law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil legal aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC general</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_and_or_information__c</fullName>
        <label>Training and/or  information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Media_Contact__c</fullName>
        <label>Type of Media Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelance Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researcher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web blogger</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Politician__c</fullName>
        <label>Type of Politician</label>
        <picklist>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Councillor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Volunteering__c</fullName>
        <label>Type of Volunteering</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC Centre (not rostered by FLAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAC office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_media__c</fullName>
        <label>Type of media</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Volunteer_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vol_Research_Capacity_working_groups__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Volunteer in Research Capacity / working groups</inlineHelpText>
        <label>Vol Research Capacity / working groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vol_training_talks_presentations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Volunteer Providing training / talks / presentations</inlineHelpText>
        <label>Vol training / talks / presentations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Contact does not want to receive automatic reminder emails about their upcoming shifts.  Used in the &quot;Volunteer Hours Reminder Email&quot; workflow rule.</inlineHelpText>
        <label>Volunteer Auto-Reminder Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Availability__c</fullName>
        <label>Volunteer Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Weekdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evenings</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Award_2012__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This volunteer qualified for FLAC&apos;s volunteer award in 2012 and should have received a pin and certificate to reflect this</description>
        <inlineHelpText>Received pin and cert in 2012 in recognition of 3 years + volunteering</inlineHelpText>
        <label>Volunteer Award 2012</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Award_2013__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer Award 2013</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours__c</fullName>
        <inlineHelpText>Total number of Hours that are Completed. Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Hours</label>
        <summarizedField>Volunteer_Hours__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Last_Web_Signup_Date__c</fullName>
        <inlineHelpText>The date of the most recent volunteer signup from the web.  Used to trigger workflow for notifications and thank you emails.</inlineHelpText>
        <label>Volunteer Last Web Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer_Manager_Notes__c</fullName>
        <inlineHelpText>Notes about the volunteer that the volunteer manager or organization staff want to record.</inlineHelpText>
        <label>Volunteer Manager Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Notes__c</fullName>
        <inlineHelpText>Notes from the volunteer.  Note that the web signup form appends the volunteers comments to this field.</inlineHelpText>
        <label>Volunteer Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Organization__c</fullName>
        <inlineHelpText>The organization, company, or group the contact is volunteering on behalf of.</inlineHelpText>
        <label>Volunteer Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Service_Began__c</fullName>
        <label>Volunteer Service Began</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Skills__c</fullName>
        <inlineHelpText>Select the skill this contact has that should be used to find volunteer jobs.</inlineHelpText>
        <label>Volunteer Skill</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receptionist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Status__c</fullName>
        <label>Volunteer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_at_Free_Legal_Advice_Centres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer at Free Legal Advice Centres</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_with_PILA_Pro_Bono_register__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer with PILA Pro Bono register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_want_to_volunteer__c</fullName>
        <label>Why want to volunteer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Willing_to_do_research__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Volunteer has indicated that they may be available for research</description>
        <label>Willing to do research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Willing_to_do_talks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Volunteer has indicated that they may be available to do talks, training, presentations etc</description>
        <label>Willing to do talks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_of_Qualification__c</fullName>
        <inlineHelpText>Enter the year this Contact qualified as a lawyer</inlineHelpText>
        <label>Year of Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>len_of_household_address__c</fullName>
        <formula>len(npo02__Formula_HouseholdMailingAddress__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>len of household address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>Formula:  The Last Donation Date of the Account where this Contact is the One to One Contact.   This has been superseded by the &apos;Last Gift Date&apos; field in the Households package.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>Formula:  The Lifetime Donation Amount of the Account where this Contact is the One to One Contact.  This field has been superseded by the &apos;Total Amount&apos; field in the Households package.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from One to One or Bucket account processing.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated field.  Do not use.</description>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the type of Account this Contact is connected to.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>if(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <formula>npo02__Household__r.npo02__Formula_MailingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <formula>npo02__Household__r.npo02__HouseholdPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>